# wgpu-compute-shader

./: .gitignore  Cargo.toml  kernel.wgsl
src/: main.rs
